# MachineLearning

./: README.md
MachineLearningCourse/: pyproject.toml
MachineLearningCourse/src/machinelearningcourse/: pre-processamentoDados.ipynb
