[project]
name = "machinelearningcourse"
version = "0.1.0"
description = ""
authors = [
    {name = "llucascr",email = "lucasdecamposranzani@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "nbformat (>=4.2.0,<5.0.0)"
]

[tool.poetry]
packages = [{include = "machinelearningcourse", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
